Update youtube link in header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -41,7 +41,7 @@
                 <i class="fa fa-facebook facebook"></i>
 
               </a>
-              <a href="#" class="no-hov">
+              <a href="https://www.youtube.com/channel/UCNc6GBwB-VPGRH1vP4bHHkQ" class="no-hov">
                 <i class="fa fa-youtube youtube" ></i>
               </a>
             </div>
